samples/_failures_safe/1761794800_480f00_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e29dbac3.c: In function ‘main’:
./samples/SAFE/__tmp_e29dbac3.c:156:15: error: ‘str’ undeclared (first use in this function)
  156 |         input[str
      |               ^~~
./samples/SAFE/__tmp_e29dbac3.c:156:15: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_e29dbac3.c:156:18: error: expected ‘]’ at end of input
  156 |         input[str
      |                  ^
      |                  ]
./samples/SAFE/__tmp_e29dbac3.c:156:9: error: expected declaration or statement at end of input
  156 |         input[str
      |         ^~~~~
./samples/SAFE/__tmp_e29dbac3.c:156:9: error: expected declaration or statement at end of input
